[bugfix] Main Page: LanguageSelector: Go back button: add min width for prevent to shrink its width too much. Config Page: SidebarSection: to not scroll x axis even if its label overflowed.

--- a/src-ui/app/config_page/sidebar_section/SidebarSection.module.scss
+++ b/src-ui/app/config_page/sidebar_section/SidebarSection.module.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     justify-content: space-between;
     overflow-y: auto;
+    // overflow-x: hidden;
     height: 100%;
     max-height: 60rem;
 }
@@ -59,7 +60,9 @@
 }
 
 .tab_text {
+    overflow: hidden;
     font-size: 1.6rem;
+    text-overflow: ellipsis;
 }
 
 .separated_tabs_wrapper {
