--- a/src-ui/app/config_page/setting_section/setting_box/_components/switch_box/SwitchBox.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/_components/switch_box/SwitchBox.module.scss
@@ -22,6 +22,7 @@
 }
 
 .toggle_control {
+    position: relative;
     @include toggle_control_styles;
     display: flex;
     justify-content: center;
