[Update/bugfix] Plugins: Fix plugins position. Switchable rendering MessageContainer and Plugins.

--- a/src-ui/app/main_page/main_section/MainSection.module.scss
+++ b/src-ui/app/main_page/main_section/MainSection.module.scss
@@ -4,7 +4,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
 }
 
 .language_selector_container {
