--- a/src-ui/app/main_page/main_section/MainSection.module.scss
+++ b/src-ui/app/main_page/main_section/MainSection.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     // justify-content: space-between;
+    overflow-y: auto;
 }
 
 .language_selector_container {
