--- a/src-ui/app/_index_css/root.css
+++ b/src-ui/app/_index_css/root.css
@@ -24,7 +24,8 @@
 html, body {
     height: 100%;
     font-family: var(--font_family); /* If not found the font family where 'root:' that is selected by user*/
-    border-radius: 1.8rem;
+    border-radius: 10px; /* fixed by px */
+    overflow: hidden;
 }
 
 
