--- a/src-ui/app/main_page/main_section/top_bar/right_side_components/_buttons/OpenQuickSettingButton.module.scss
+++ b/src-ui/app/main_page/main_section/top_bar/right_side_components/_buttons/OpenQuickSettingButton.module.scss
@@ -1,14 +1,15 @@
 .container {
-    // height: 100%;
+    height: 100%;
 }
 
 .button_wrapper {
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 0.2rem;
-    padding: 0.6rem 0.4rem;
+    padding: 0 0.8rem;
     border-radius: 0.2rem;
     cursor: pointer;
     &:hover {
