[Update/bugfix] UI: Add disable/enable UI function when osc query is disabled. Fix the error that the mic mute sync couldn't enable/disable.

--- a/src-ui/app/snackbar_controller/SnackbarController.module.scss
+++ b/src-ui/app/snackbar_controller/SnackbarController.module.scss
@@ -6,6 +6,9 @@
     &.is_success {
         background-color: var(--success_bc_color);
     }
+    &.is_warning {
+        background-color: var(--waring_bc_color);
+    }
     &.is_error {
         background-color: var(--error_bc_color);
     }
