--- a/src-ui/app/_index_css/variables.css
+++ b/src-ui/app/_index_css/variables.css
@@ -25,6 +25,7 @@
     --error_bc_active_color: #9c3938;
     --success_bc_color: #368777;
     --waring_color: #cb944f;
+    --waring_bc_color: #cf7b1b;
 
     --dark_basic_text_color: #f2f2f2;
     --dark_100_color: #f5f7fb;
