--- a/src-ui/app/config_page/setting_section/setting_box/supporters/supporters_container/supporters_wrapper/SupportersWrapper.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/supporters/supporters_container/supporters_wrapper/SupportersWrapper.module.scss
@@ -13,7 +13,7 @@
     align-content: start;
     flex-wrap: wrap;
     column-gap: 1.8rem;
-    row-gap: 0.4rem;
+    row-gap: 2rem;
 }
 
 .supporter_image_container {
@@ -209,13 +209,24 @@ $progress_ease: cubic-bezier(0, 1, 0.75, 1);
 
 
 .supporter_period_container {
+    position: absolute;
+    top: 100%;
+    left: 0;
+}
+.supporter_period_wrapper {
     display: flex;
-    gap: 0.2rem;
-    padding-left: 0.4rem;
+    gap: 0.4rem 0.2rem;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+    padding: 0.3rem 0.4rem 0.4rem 0.4rem;
+}
+
+.period_box_wrapper {
+    flex-shrink: 0;
 }
 
 .period_box {
-    width: 1.8rem;
+    width: 1.7rem;
     height: 0.3rem;
     border-radius: 0.3rem;
     &.mogu_bar {
@@ -231,9 +242,7 @@ $progress_ease: cubic-bezier(0, 1, 0.75, 1);
         background-color: var(--dark_800_color);
     }
 }
-.period_box_wrapper {
-    padding: 0.3rem 0 0.4rem 0;
-}
+
 .tooltip_period_label {
     font-size: 1.4rem;
 }
