--- a/src-ui/app/modal_controller/update_modal/plugins_compatibility_list/PluginCompatibilityList.module.scss
+++ b/src-ui/app/modal_controller/update_modal/plugins_compatibility_list/PluginCompatibilityList.module.scss
@@ -54,7 +54,7 @@
 .warning_svg {
     padding-bottom: 0.4rem;
     width: 2.4rem;
-    color: var(--waring_color);
+    color: var(--warning_color);
     flex-shrink: 0;
 }
 
