--- a/src-ui/app/snackbar_controller/SnackbarController.module.scss
+++ b/src-ui/app/snackbar_controller/SnackbarController.module.scss
@@ -1,30 +1,22 @@
-/* SnackbarController.module.scss */
-
-/* -------------------------------------------------
-   1) トースト共通のスタイル
---------------------------------------------------*/
 .snackbar_content {
     position: relative;
     padding: 1.2rem 1.6rem;
     border-radius: 0.8rem;
     font-size: 1.4rem;
     box-shadow: 0 0.2rem 0.8rem rgba(0, 0, 0, 0.5);
-    color: #fff; /* ダークテーマ前提で文字を白に */
 }
 
-/* ステータス別に背景色を指定 */
-.is_success {
-    background-color: var(--success_bc_color);
-}
+// .is_success {
+//     background-color: var(--success_bc_color);
+// }
 
-.is_warning {
-    background-color: var(--warning_bc_color);
-    color: #212529; /* 黄系の背景に合わせて文字を濃く */
-}
+// .is_warning {
+//     background-color: var(--warning_bc_color);
+// }
 
-.is_error {
-    background-color: var(--error_bc_color);
-}
+// .is_error {
+//     background-color: var(--error_bc_color);
+// }
 
 
 .megaphone_svg {
@@ -40,7 +32,7 @@
     width: 2rem;
 }
 .warning_svg {
-    color: var(--waring_color);
+    color: var(--warning_color);
     width: 2.4rem;
 }
 
