[Update] Add save success notification.

--- a/src-ui/app/others/snackbar_controller/ReactToastifyOverrideClass.scss
+++ b/src-ui/app/others/snackbar_controller/ReactToastifyOverrideClass.scss
@@ -111,3 +111,34 @@
     justify-content: center;
     align-items: center;
 }
+
+@keyframes fade_in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes fade_out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+.fade_in {
+    opacity: 0;
+    animation-name: fade_in;
+    animation-duration: 0.1s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+.fade_out {
+    opacity: 1;
+    animation-name: fade_out;
+    animation-duration: 0.2s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
