[Update/bugfix] Notification UI: Adjust an animation. Add localizations. Fix stack behavior that was not updated correctly. (it still has an issue tho.)

--- a/src-ui/app/others/snackbar_controller/ReactToastifyOverrideClass.scss
+++ b/src-ui/app/others/snackbar_controller/ReactToastifyOverrideClass.scss
@@ -138,7 +138,7 @@
 .fade_out {
     opacity: 1;
     animation-name: fade_out;
-    animation-duration: 0.2s;
-    animation-timing-function: ease-out;
+    animation-duration: 0.1s;
+    animation-timing-function: ease-in;
     animation-fill-mode: forwards;
 }
