[Update] Add transliteration position navigator when hiragana and romaji is both enabled and mouse hovered.

--- a/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
+++ b/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
@@ -113,3 +113,10 @@
         color: var(--dark_500_color);
     }
 }
+
+// For ruby
+.with_hepburn {
+    &:hover {
+        color: var(--dark_500_color);
+    }
+}
