[Refactor] WordFilter: Improve reusability of setting container templates.

--- a/src-ui/views/app/config_page/setting_section/setting_box/_components/word_filter/WordFilter.module.scss
+++ b/src-ui/views/app/config_page/setting_section/setting_box/_components/word_filter/WordFilter.module.scss
@@ -4,11 +4,13 @@
     align-items: center;
     flex-direction: column;
     gap: 2rem;
+    width: 100%;
 }
 
 
 .list_section_wrapper {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     width: 100%;
     gap: 0.6rem;
