--- a/src-ui/views/app/config_page/setting_section/setting_box/_templates/Templates.module.scss
+++ b/src-ui/views/app/config_page/setting_section/setting_box/_templates/Templates.module.scss
@@ -8,7 +8,9 @@
     &.flex_column {
         flex-direction: column;
     }
-    border-bottom: solid 0.1rem var(--dark_800_color);
+    &:not(.remove_border_bottom) {
+        border-bottom: solid 0.1rem var(--dark_800_color);
+    }
 
     &.is_break_point {
         flex-direction: column;
@@ -32,26 +34,4 @@
 
 .message_format_section {
     width: 100%;
-}
-
-
-.word_filter_container {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
-    padding: 2rem;
-}
-
-.word_filter_switch_section {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.word_filter_label_wrapper {
-    max-width: 34rem;
 }
