--- a/src-ui/views/app/config_page/setting_section/setting_box/_components/switch_box/SwitchBox.module.scss
+++ b/src-ui/views/app/config_page/setting_section/setting_box/_components/switch_box/SwitchBox.module.scss
@@ -1,33 +1,17 @@
 @import "@scss_mixins";
 
-.switchbox_container {
+.container {
     display: flex;
-    justify-content: end;
-    align-items: center;
-    height: 2rem;
-}
-
-.switchbox_wrapper {
-    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
-    padding: 2rem;
-    height: 100%;
-    flex-shrink: 0;
-    &.is_pending {
-        pointer-events: none;
-    }
+    gap: 1rem;
 }
 
-.toggle_control {
-    position: relative;
-    @include toggle_control_styles;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.loader {
-    @include loader(2rem, 0.2rem, right, -4rem);
+.secondary_label {
+    padding-left: 0.2rem;
+    padding-right: 0.4rem;
+    font-size: 1.4rem;
+    color: var(--dark_500_color);
+    white-space: nowrap;
 }
