--- a/src-ui/views/app/main_page/sidebar_section/language_settings/translator_selector_open_button/translator_selector/TranslatorSelector.module.scss
+++ b/src-ui/views/app/main_page/sidebar_section/language_settings/translator_selector_open_button/translator_selector/TranslatorSelector.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow-y: auto;
 }
 
 .relative_container {
@@ -17,8 +18,7 @@
 }
 
 .wrapper {
-    width: 100%;
-    height: 100%;
+    padding: 2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
