[Update] Adjust button padding and entry width in OpenWebpageButton; add responsive text size in SidebarSection

--- a/src-ui/views/app/config_page/setting_section/setting_box/_components/_atoms/_open_webpage_button/_OpenWebpageButton.module.scss
+++ b/src-ui/views/app/config_page/setting_section/setting_box/_components/_atoms/_open_webpage_button/_OpenWebpageButton.module.scss
@@ -2,10 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: fit-content;
 }
 
 .open_webpage_button {
-    padding: 0.6rem 2.8rem;
+    padding: 0.6rem 1.2rem;
     display: flex;
     gap: 1rem;
     justify-content: center;
