--- a/src-ui/views/app/config_page/sidebar_section/SidebarSection.module.scss
+++ b/src-ui/views/app/config_page/sidebar_section/SidebarSection.module.scss
@@ -64,6 +64,9 @@
     font-size: 1.6rem;
     // text-overflow: ellipsis;
     position: relative;
+    &.tab_text_small {
+        font-size: 1.4rem;
+    }
 }
 .crown_emoji {
     font-size: 1.6rem;
