--- a/src-ui/views/app/config_page/setting_section/setting_box/_components/connection_check_button/ConnectionCheckButton.module.scss
+++ b/src-ui/views/app/config_page/setting_section/setting_box/_components/connection_check_button/ConnectionCheckButton.module.scss
@@ -9,6 +9,17 @@
     }
 }
 
+.status_label {
+    font-size: 1.2rem;
+    color: var(--dark_200_color);
+    margin-bottom: 0.8rem;
+}
+
+.button_label {
+    font-size: 1.4rem;
+    color: var(--dark_100_color);
+}
+
 .button_svg {
     width: 2.4rem;
     color: var(--dark_400_color);
